--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
-  "dependencies": {},
   "devDependencies": {
     "@stencil/core": "^0.17.0",
     "@stencil/postcss": "^0.1.0",
     "@stencil/stylus": "^0.1.0",
     "@types/jest": "^23.3.13",
+    "@types/node": "^10.12.24",
     "cross-env": "^5.2.0",
     "postcss-preset-env": "^6.5.0",
     "prismjs": "^1.15.0"
