--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "devDependencies": {
-    "@stencil/core": "^0.18.1-0",
+    "@stencil/core": "^0.18.1",
     "@stencil/postcss": "^0.1.0",
     "@stencil/stylus": "^0.1.0",
     "@types/jest": "^23.3.14",
